<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wavlite.WLAndroid.ui.DetailListView">

    <item
        android:id="@+id/menu_search3"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/my_search_lists"
        android:title="@string/menu_mylists"
        android:icon="@drawable/ic_lists"
        android:orderInCategory="2"
        app:showAsAction= "ifRoom" />

    <item
        android:id="@+id/menu_create_list1"
        android:title="@string/menu_create"
        android:icon="@drawable/ic_add"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_list_bulk"
        android:title="@string/menu_edit"
        android:icon="@drawable/icons_edit"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="6"
        app:showAsAction="ifRoom" />

</menu>
