<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wavlite="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/main_menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        wavlite:showAsAction="always" />

    <item
        android:id="@+id/main_menu_my_lists"
        android:title="@string/menu_mylists"
        android:icon="@drawable/ic_lists"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/main_create_searchlist"
        android:title="@string/menu_create"
        android:icon="@drawable/ic_add"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/main_action_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="4"
        wavlite:showAsAction="never" />

</menu>
