<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/ma_main_bkgnd">

    <WebView
        android:id="@+id/webView"
        android:layout_below="@id/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp221"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:layout_margin="@dimen/dp0"
        android:padding="@dimen/dp0" />

    <!-- Not quite sure we need this? -->
    <ImageButton
        android:id="@+id/close_button"
        android:src="@android:drawable/ic_delete"
        android:contentDescription="@string/btn_delete_cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/app_bar"
        android:visibility="invisible" />


    <!--
        DISPLAY ALL MODULES/VIEWS/CONTENT HERE

        Genre Layouts and Buttons. Each row of buttons will have one
        horizontal linear layout (there are 2 to start with) so that
        there are only 3 buttons per row. The id's for each row will
        be simplified to "genre_btn_view_[row #]". The button id's
        are simply "btn_[genre]"

        NOTE: THE LOGO PLACEHOLDER BELOW IS LARGER THAN XXXHDMI:
              *** FULL SIZE (1060px X 1060px, .png) ***
    -->
    <!-- LinearLayout Horizontal 1 (3 buttons wide) -->
    <LinearLayout
        android:id="@+id/genre_btn_view_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/webView"
        android:background="@color/ma_btnV_bkgnd"
        android:orientation="horizontal"
        android:paddingRight="@dimen/dp3"
        android:paddingLeft="@dimen/dp3"
        android:weightSum="3" >

        <!-- ROCK -->
        <Button
            android:id="@+id/btn_rock"
            android:text="@string/btn_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/txt_blue_dark" />

        <!-- JAZZ -->
        <Button
            android:id="@+id/btn_jazz"
            android:text="@string/btn_jazz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/txt_blue_dark" />

        <!-- HIP-HOP -->
        <Button
            android:id="@+id/btn_hiphop"
            android:text="@string/btn_hiphop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/txt_blue_dark" />
    </LinearLayout>

    <!-- LinearLayout Horizontal 2 (3 buttons wide) -->
    <LinearLayout
        android:id="@+id/genre_btn_view_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/genre_btn_view_1"
        android:background="@color/ma_btnV_bkgnd"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingRight="@dimen/dp3"
        android:paddingLeft="@dimen/dp3" >

        <!-- COUNTRY -->
        <Button
            android:id="@+id/btn_country"
            android:text="@string/btn_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/txt_blue_dark" />

        <!-- BLUES -->
        <Button
            android:id="@+id/btn_blues"
            android:text="@string/btn_blues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/txt_blue_dark" />

        <!-- R & B -->
        <Button
            android:id="@+id/btn_rnb"
            android:text="@string/btn_rnb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/txt_blue_dark" />
    </LinearLayout>


    <!-- Large logo place holder (1060px^2) -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp320"
        android:id="@+id/imageViewLogo"
        android:src="@drawable/ic_logo_fullsize"
        android:contentDescription="@string/ma_logo_cd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/genre_btn_view_2" />



</RelativeLayout>
